--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,23 @@
-# Byte-compiled / optimized / DLL files
+# --- OS junk ---
+.DS_Store
+Thumbs.db
+
+# --- Python bytecode / build ---
 __pycache__/
 *.py[cod]
 *$py.class
+build/
+dist/
+.eggs/
+*.egg-info/
 
-# C extensions
+# --- C extensions ---
 *.so
 
-# Distribution / packaging
+# --- Packaging leftovers ---
 .Python
-build/
 develop-eggs/
-dist/
 downloads/
-eggs/
-.eggs/
 lib/
 lib64/
 parts/
@@ -21,22 +25,15 @@ sdist/
 var/
 wheels/
 share/python-wheels/
-*.egg-info/
 .installed.cfg
-*.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+# --- PyInstaller ---
 *.manifest
 *.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
+# --- Logs / coverage / test caches ---
+*.log
 htmlcov/
 .tox/
 .nox/
@@ -51,122 +48,79 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
+# --- Translations ---
 *.mo
 *.pot
 
-# Django stuff:
-*.log
+# --- Django defaults (harmless here) ---
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# --- Flask runtime ---
 instance/
 .webassets-cache
 
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
+# --- Docs / builders ---
 docs/_build/
-
-# PyBuilder
 .pybuilder/
 target/
 
-# Jupyter Notebook
+# --- Notebooks / IPython ---
 .ipynb_checkpoints
-
-# IPython
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-.pdm-python
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# --- Environments ---
 .env
-.venv
-env/
+.env.*
+.venv/
 venv/
+env/
 ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
+# --- Tool caches / types ---
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
 .pyre/
-
-# pytype static type analyzer
 .pytype/
-
-# Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+# --- IDEs ---
 .idea/
+.vscode/
 
-# Custom
+# --- Databases ---
+*.sqlite3
+data-*.db
+data-dev.db
 *.db
-uploads/*
+
+# --- Uploads (keep placeholders) ---
+uploads/**
 !uploads/.gitkeep
-!uploads/avatars
-uploads/avatars/*
+!uploads/avatars/
+uploads/avatars/**
 !uploads/avatars/.gitkeep
-logs/*
+
+# --- Logs (keep placeholder) ---
+logs/**
 !logs/.gitkeep
-whooshee
+
+# --- Whooshee index (keep placeholder) ---
+whooshee/**
+!whooshee/.gitkeep
+
+# --- Keys / certs ---
+*.key
+*.pem
+*.p12
+*.crt
+
+# NOTE: keep these committed
+# - uv.lock
+# - requirements.txt
+# - pyproject.toml
